--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 spring:
     datasource:
         url: jdbc:mysql://localhost:3306/allfeaturesdatabase?useSSL=false
@@ -10,12 +11,15 @@ spring:
     jpa:
         show-sql: true
         hibernate.ddl-auto: update
-#        hibernate.naming-strategy: org.hibernate.cfg.ImprovedNamingStrategy 
-#        properties.hibernate.dialect: org.hibernate.dialect.MYSQL5Dialect
+    messages.basename: validation
      
+spring.jpa.database-platform: org.hibernate.dialect.MySQL57Dialect
+spring.jpa.generate-ddl: true
+
+
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
 server.port: 8081
 
-spring.messages.basename: validation
+
      
