--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,16 @@
 		<!-- END OF Need this to compile JSP -->
 		
 		
+		<!-- Aspect Oriented Programmming Dependency -->
+		
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-aspects</artifactId>
+		    <version>3.2.0.RELEASE</version>
+		</dependency>
+		
+		<!-- END OF Aspect Oriented Programmming Dependency -->
+		
 	</dependencies>
 
 	<build>
