--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,25 @@
 		
 		<!-- END OF Aspect Oriented Programmming Dependency -->
 		
+		
+		<!-- TEXT ENCRYPTION -->
+		
+		<dependency>
+		    <groupId>org.jasypt</groupId>
+		    <artifactId>jasypt</artifactId>
+		    <version>1.9.3</version>
+		</dependency>
+		
+		<!-- END OF TEXT ENCRYPTION -->
+
+
+
+	<dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-core</artifactId>
+	    <version>${spring-security.version}</version>
+	</dependency>
+	
 	</dependencies>
 
 	<build>
