--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,8 @@ spring.jpa.generate-ddl: true
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
 server.port: 8081
-
-
+server.contextPath: /
+spring.servlet.multipart.enabled: true
+spring.servlet.multipart.max-file-size: 10MB
+spring.servlet.multipart.max-request-size: 15MB
      
