--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,18 @@
 		<!-- END OF TEXT ENCRYPTION -->
 
 
+		<!-- For Video Content Solution  -->
+<!-- 		<dependency>
+		    <groupId>com.github.paulcwarren</groupId>
+		    <artifactId>spring-content-rest-boot-starter</artifactId>
+		    <version>0.0.10</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.github.paulcwarren</groupId>
+		    <artifactId>content-fs-spring-boot-starter</artifactId>
+		    <version>0.0.10</version>
+		</dependency> -->
+		<!--END OF For Video Content Solution  -->
 
 	<dependency>
 	    <groupId>org.springframework.security</groupId>
