--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,8 @@ spring.jpa.generate-ddl: true
 
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
-server.port: 8081
+# server.port: 8081
+server.port: ${PORT:8080}
 server.contextPath: /
 spring.servlet.multipart.enabled: true
 spring.servlet.multipart.max-file-size: 1000MB
