--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,13 @@
+
 spring:
-    
+    datasource:
+        url: jdbc:mysql://localhost:3306/allfeaturesdatabase?useSSL=false
+        username: admin
+        password: password
+#        tomcat:
+#        test-while-idle: 
+#        tomcat:
+#        validation-query: 
     jpa:
         show-sql: true
         hibernate.ddl-auto: update
@@ -17,3 +25,4 @@ server.contextPath: /
 spring.servlet.multipart.enabled: true
 spring.servlet.multipart.max-file-size: 1000MB
 spring.servlet.multipart.max-request-size: 1000MB
+     
