--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,13 @@
+
 spring:
-    
+    datasource:
+        url: jdbc:mysql://localhost:3306/allfeaturesdatabase?useSSL=false
+        username: admin
+        password: password
+#        tomcat:
+#        test-while-idle: 
+#        tomcat:
+#        validation-query: 
     jpa:
         show-sql: true
         hibernate.ddl-auto: update
@@ -11,9 +19,10 @@ spring.jpa.generate-ddl: true
 
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
-# server.port: 8081
-server.port: ${PORT:8080}
+server.port: 8081
+#server.port: ${PORT:8080}
 server.contextPath: /
 spring.servlet.multipart.enabled: true
 spring.servlet.multipart.max-file-size: 1000MB
 spring.servlet.multipart.max-request-size: 1000MB
+     
